--- a/example/src/app/globals.css
+++ b/example/src/app/globals.css
@@ -1,26 +1,63 @@
 @import "tailwindcss";
 
+@layer base, components, utilities;
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Status Colors */
+  --status-done: #04D200;
+  --status-progress: #FFE710;
+  --status-pending: #FF9900;
+
+  /* Primary Colors */
+  --primary-bg: #F2F4FC;
+  --primary-text: #525F90;
+  --secondary-bg: rgba(251, 253, 255, 1);
+  /* Accent Colors */
+  --accent: #022FA7;
+  --accent-light: #023FA7;
+  /* Font size */
+  --text-sm: 13px;
+  --text-base: 14px;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .bg-status-done {
+    background-color: var(--status-done);
+  }
+  .bg-status-progress {
+    background-color: var(--status-progress);
+  }
+  .bg-status-pending {
+    background-color: var(--status-pending);
+  }
+  .bg-primary {
+    background-color: var(--primary-bg);
+  }
+  .bg-secondary {
+    background-color: var(--secondary-bg);
+  }
+  .text-primary {
+    color: var(--primary-text);
+  }
+  .bg-accent {
+    background-color: var(--accent);
+  }
+  .bg-accent-light {
+    background-color: var(--accent-light);
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--primary-bg);
+  color: var(--primary-text);
+}
+
+h1,h2,h3 {
+  color: black;
+  font-weight: 600;
+}
+
+label {
+  font-size: var(--text-sm);
+  font-weight: 300;
 }
