Enhance README, improve styles, and refactor table service
- Updated README to include testing framework decision and build data availability issue.
- Added new CSS variables and utility classes for accent colors in global styles.
- Refactored table data fetching and saving logic into a dedicated service file.
- Improved layout and styling in various components for better user experience.

--- a/example/src/app/globals.css
+++ b/example/src/app/globals.css
@@ -12,9 +12,11 @@
   --primary-bg: #F2F4FC;
   --primary-text: #525F90;
   --secondary-bg: rgba(251, 253, 255, 1);
+  
   /* Accent Colors */
   --accent: #022FA7;
   --accent-light: #023FA7;
+  --accent-lightest: #D2D7E8;
   /* Font size */
   --text-sm: 13px;
   --text-base: 14px;
@@ -44,6 +46,12 @@
   }
   .bg-accent-light {
     background-color: var(--accent-light);
+  }
+  .bg-accent-lightest {
+    background-color: var(--accent-lightest);
+  }
+  .border-accent-lightest {
+    border-color: var(--accent-lightest);
   }
 }
 
